--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -638,6 +638,10 @@ body.no-js {
     padding-bottom: 1em !important;
 }
 
+.margin--bottom {
+    margin-bottom: 1em !important;
+}
+
 .display--flex {
     display: flex;
 }
