Styling taak selectie

--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -614,6 +614,9 @@ body.no-js {
 .bgc-white {
     background-color: $white;
 }
+.bgc-gray01 {
+    background-color: $gray-tint01;
+}
 .nowrap {
     white-space: nowrap;
 }
