--- a/app/apps/main/templates/melding/part_taak_starten.html
+++ b/app/apps/main/templates/melding/part_taak_starten.html
@@ -26,7 +26,7 @@
             {% include "snippets/messages.html" %}
             <form action="{% url 'taak_starten' melding.uuid %}"
                   method="post"
-                  class=""
+                  class="taak--start"
                   data-controller="taakstartenformulier"
                   data-turbo-frame="_top"
                   data-taakstartenformulier-target="formTaakStarten"
@@ -35,52 +35,67 @@
                   novalidate>
                 {% csrf_token %}
                 {{ form.errors }}
-                <div class="form-control__with-helptext container__form-check-cols3"
-                     data-taakstartenformulier-target="onderwerpGerelateerdTaaktypeField">
-                    <div class="form-row">
-                        <label>Vaak gekozen bij dit type melding</label>
-                        <div class="wrapper__columns">{{ form.onderwerp_gerelateerd_taaktype }}</div>
-                        <p class="help-block invalid-text no-margin"></p>
+                <section class="bgc-gray01">
+                    <div class="form-control__with-helptext container__form-check-cols3"
+                         data-taakstartenformulier-target="onderwerpGerelateerdTaaktypeField">
+                        <div class="form-row">
+                            <label>Vaak gekozen bij dit type melding</label>
+                            <div class="wrapper__columns">{{ form.onderwerp_gerelateerd_taaktype }}</div>
+                            <p class="help-block invalid-text no-margin"></p>
+                        </div>
                     </div>
-                </div>
-                <div class="form-control__with-helptext">
-                    <div class="form-row">
-                        <label for="taaktype-search">Zoek een andere taak</label>
-                        <input type="text"
-                               id="taaktype-search"
-                               data-taakstartenformulier-target="taaktypeSearch"
-                               placeholder="Zoek een andere taak...">
+                </section>
+                <section>
+                    <div class="form-control__with-helptext container__search">
+                        <div class="form-row">
+                            <label for="taaktype-search">Zoek een andere taak</label>
+                            <input type="search"
+                                   id="taaktype-search"
+                                   class="form-control"
+                                   data-taakstartenformulier-target="taaktypeSearch"
+                                   placeholder="Zoek een andere taak...">
+                        </div>
                     </div>
-                </div>
-                <div class="form-control__with-helptext">
-                    <div class="form-row">
-                        <label>Afdeling</label>
-                        <div data-taakstartenformulier-target="afdelingField">{{ form.afdeling }}</div>
-                        <p class="help-block invalid-text no-margin"></p>
+                </section>
+                <section>
+                    <div class="grid-container grid-container--reversed">
+                        <div class="grid-item">
+                            <div class="form-control__with-helptext">
+                                <div class="form-row input-labels">
+                                    <div data-taakstartenformulier-target="afdelingField">{{ form.afdeling }}</div>
+                                    <p class="help-block invalid-text no-margin"></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="grid-item">
+                            <div class="form-control__with-helptext container__form-check-cols2"
+                                 data-taakstartenformulier-target="taaktypeField">
+                                <div class="form-row">
+                                    <div class="wrapper__columns">{{ form.taaktype }}</div>
+                                    <p class="help-block invalid-text no-margin"></p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="form-control__with-helptext container__form-check-cols3"
-                     data-taakstartenformulier-target="taaktypeField">
-                    <div class="form-row">
-                        <label>Taak</label>
-                        <div class="wrapper__columns">{{ form.taaktype }}</div>
-                        <p class="help-block invalid-text no-margin"></p>
+                </section>
+                <section>
+                    <div class="form-control__with-helptext">{{ form.bericht|render_rotterdam_formulier }}</div>
+                </section>
+                <section>
+                    <div class="form--horizontal">
+                        <div class="form-row btn-row">
+                            <button type="reset"
+                                    class="btn btn-tertiary"
+                                    data-action="detail#closeModal"
+                                    data-detail-target="modalAfhandelen">
+                                <span>Annuleren</span>
+                            </button>
+                            <button type="submit" class="btn btn-action">
+                                <span>Start taak</span>
+                            </button>
+                        </div>
                     </div>
-                </div>
-                <div class="form-control__with-helptext">{{ form.bericht|render_rotterdam_formulier }}</div>
-                <div class="form--horizontal">
-                    <div class="form-row btn-row">
-                        <button type="reset"
-                                class="btn btn-tertiary"
-                                data-action="detail#closeModal"
-                                data-detail-target="modalAfhandelen">
-                            <span>Annuleren</span>
-                        </button>
-                        <button type="submit" class="btn btn-action">
-                            <span>Start taak</span>
-                        </button>
-                    </div>
-                </div>
+                </section>
             </form>
         </div>
     </div>
