--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -617,6 +617,10 @@ body.no-js {
 .bgc-gray01 {
     background-color: $gray-tint01;
 }
+
+.green {
+    color: $green-tint01;
+}
 .nowrap {
     white-space: nowrap;
 }
