--- a/app/frontend/assets/styles/components/_dashboard.scss
+++ b/app/frontend/assets/styles/components/_dashboard.scss
@@ -72,6 +72,7 @@ canvas {
                     box-sizing: border-box;
                     border-radius: 2em;
                     padding: 0 0.5em;
+                    white-space: nowrap;
                 }
             }
         }
