Attempted updates to make submission work.

--- a/app/apps/main/templates/melding/part_taak_starten.html
+++ b/app/apps/main/templates/melding/part_taak_starten.html
@@ -30,6 +30,7 @@
                   data-controller="taakstartenformulier"
                   data-taakstartenformulier-target="formTaakStarten"
                   data-taakstartenformulier-taaktypes="{{ taaktype_choices|json_encode }}"
+                  data-initial-afdeling="{{ initial_afdeling }}"
                   enctype="multipart/form-data"
                   novalidate>
                 {% csrf_token %}
